# OpenLearning

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  sitemap.xml
backend/: .dockerignore  .env.example  Dockerfile  openapi.json  pyproject.toml  requirements.txt
backend/app/: config.py  crypto.py  db.py  deps.py  exceptions.py  main.py  password.py
backend/app/agents/: calibrator.py  content_nodes.py  gap_analyzer.py  gap_enricher.py  knowledge_mapper.py  plan_generator.py  (+5 more)
backend/migrations/: 002_add_auth_methods.sql
backend/tests/: conftest.py  test_agents.py  test_ai_service.py  test_anthropic_error_handling.py  test_assessment_mappers.py  test_assessment_routes.py  test_assessment_service.py  test_auth.py  test_auth_guard.py  test_config.py  test_content_nodes.py  test_content_pipeline.py  test_crypto.py  test_db.py  test_deps.py  test_export.py  test_export_materials_integration.py  test_gap_analysis_route.py  test_gap_enricher.py  test_health.py  test_knowledge_base.py  test_learning_plan_route.py  test_main.py  test_materials_route.py  test_models_gap.py  test_models_gap_learning.py  test_parse_json_response.py  test_password.py  test_pipeline.py  test_plan_generator_concepts.py  test_plan_generator_prompt.py  test_resource_validator.py  test_retry.py  test_roles.py  test_router.py  test_session_cleanup.py  test_sse_adapter.py  test_state.py  test_structured_output.py  test_taxonomy.py  (+3 more)
(+330 files in other folders)
